Updated date message

--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
 
       <div class="starter-template">
         <h1>DeepSleep App Site Stats</h1>
-        <p class="lead">Updated 5/8/22</p>
+        <p class="lead">Updated 5/14/22</p>
       </div>
       <div>
 
@@ -72,7 +72,7 @@
 
         </div>
         <br>
-        <h4>Users per Day</h4>
+        <h4>Active Users per Day</h4>
         <div id="users_synced">
           <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
             <button type="button" class="btn1 btn-outline-primary">Week</button>
@@ -82,7 +82,7 @@
          <canvas id='timeSeriesChart2' width='200' height='100'></canvas>
         </div>
         <br>
-        <h4>Activity per Day</h4>
+        <h4>Total Activity per Day</h4>
         <div id="countAppOpened">
           <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
             <button type="button" class="btn2 btn-outline-primary">Week</button>
