--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1>DeepSleep App Site Stats</h1>
+        <h1>DeepSleep Site Stats</h1>
         <p class="lead">Updated 5/14/22</p>
       </div>
       <div>
