--- a/index.htm
+++ b/index.htm
@@ -32,17 +32,17 @@
       <nav class="navbar navbar-dark bg-dark justify-content-between fixed-top">
         <a class="navbar-brand" href="#" style="display: flex; flex-direction: row; align-items: center;"><img src="dsstatslogo.png" style="width:22px;height:25px;"> <h2 style="display: inline; padding-left: 10px; margin:0px !important;">DeepSleep Site Stats</h2></a>
         <form class="form-inline">
-          <button class="btn btn-danger btn-sm my-2 my-sm-0" type="submit">Logout</button>
+          <button class="btn btn-danger btn-sm my-2 my-sm-0" v-if="false" type="submit" v-on:click="logout()">Logout</button>
         </form>
       </nav>
 
 
       <!-- LOGGED IN CONTENT -->
-      <div class="container" v-if="loggedIn">
+      <div class="container" v-if="isAuthorized">
         <div v-for="(stat, index) in stats">
           <h4>{{stat.name}}</h4>
           <div class="btn-group btn-group-sm" role="group" aria-label="Basic example" v-for="view in stat.views">
-            <button type="button" class="btn-outline-primary" :class="{'active': stat.selectedView == view}" v-on:click="updateStatView(index, view)">{{view.name}}</button>
+            <button type="button" class="btn-outline-primary" :class="{'active': stat.selectedView == view}" v-on:click="changeStatView(index, view)">{{view.name}}</button>
           </div>
           <canvas class="area" :id='stat.canvasId' width='200' height='100'>
 
@@ -50,6 +50,57 @@
             <br>
         </div>
       </div>
+
+      <div v-if="!isAuthorized">
+        <div class="container-fluid">
+          <div class="row d-flex justify-content-center align-items-center m-0" style="height: 100vh;">
+            <div class="login_oueter">
+              <div class="col-md-12 logo_outer"></div>
+              <div class="bg-light border p-3">
+                <div class="form-row">
+                  <h4 class="title my-3">Login For Access</h4>
+                  <div class="col-12">
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                      </div>
+                      <input name="username" type="text" v-model="login_params.data.email" class="input form-control"  placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" />
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                      </div>
+                      <input name="password" v-bind:type="login_params.show_password ? 'text ' : 'password' " v-model="login_params.data.password"  class="input form-control" placeholder="password" required="true" aria-label="password" aria-describedby="basic-addon1" />
+                      <div class="input-group-append">
+                        <span class="input-group-text" v-on:click="login_params.show_password = !login_params.show_password">
+                          <i class="fas fa-eye" v-if="!login_params.show_password"></i>
+                          <i class="fas fa-eye-slash" id="hide_eye" v-if="login_params.show_password"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="form-group form-check text-left">
+                      <input type="checkbox" name="remember" class="form-check-input" v-model="login_params.remember_me" />
+                      <label class="form-check-label" for="remember_me">Remember me</label>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <button class="btn btn-primary" v-on:click="login()" name="signin" >Login</button>
+                  </div>
+                </div>
+              </div>
+              <div v-if="login_error_msg" class="alert alert-danger alert-dismissible"  v-if="login_error_msg" style="margin-top: 10px;">
+                <a href="#" class="close" data-dismiss="alert" v-on:click="login_error_msg = null" aria-label="close">&times;</a>
+                <strong>{{login_error_msg}}</strong> 
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
   
   
     </div>
@@ -63,6 +114,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  
   </body>
 </html>
